# VectorDb

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  config.py  main.py  singletons.py
app/api/: admin.py  chunks.py  documents.py  indexing.py  libraries.py  search.py  search_temporal.py
app/domain/: dtos.py  errors.py  models.py
app/persistence/: store.py
app/repo/: memory.py
app/repo/indices/: flat.py  metrics.py  rp_forest.py
app/services/: chunks.py  documents.py  embeddings.py  filters.py  indexing.py  libraries.py  search.py  validation.py
app/temporal/: activities.py  client.py  config.py  dtos.py  worker.py  workflows.py
data/: chunk_clusters.jsonl
scripts/: load_dummy_chunks.py
temporal/: docker-compose.yml
tests/: conftest.py
tests/api/: test_chunk_mutations.py  test_dim_enforcement.py  test_filters.py  test_index_build_and_search_rp.py  test_library_delete.py  test_smoke.py
tests/unit/: test_indexing_restore.py  test_search_service.py
vectordb_client/: __init__.py  client.py  config.py  exceptions.py  models.py  temporal.py
vectordb_client/examples/: compare_indexes.py  quickstart.py  temporal_async.py
