[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vectordb"
version = "0.1.0"
description = "Temporal-enabled vector search service and client."
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies"]
authors = [{ name = "VectorDb Developers" }]

[tool.setuptools.packages.find]
include = ["app", "app.*", "vectordb_client", "vectordb_client.*"]
exclude = ["tests*", "data*", "scripts*", "tools*"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools]
include-package-data = true
